News
====

.. contents::

2.0
---

* Experimental Python 3 support.

* paste now requires the six module.

* Drop support of Python 2.5 and older.

* Fixed ``egg:Paste#cgi``

* In ``paste.httpserver``: give a 100 Continue response even when the
  server has been configured as an HTTP/1.0 server (clients may send
  ``Expect: 100-Continue`` before they know the version), and wrap
  100 Continue ``environ['wsgi.input']`` files with LimitedLengthFile
  just like normal request bodies are wrapped, keeping WSGI
  applications from over-reading from the socket.

* Fixed parsing of paths beginning with multiple forward slashes.

* Add tox.ini to run tests with tox on Python 2.6, 2.7 and 3.4.

1.7.5.1
-------

* Fix bug introduced in :mod:`paste.auth.auth_tkt` (with ``url_unquote``)

1.7.5
-----

* Won't install ``tests/`` directory (also caused installation
  problems on some Mac systems).

* Fixed problem with gzip middleware and zero-length responses.

* Use ``X-Forwarded-For`` header in :mod:`paste.translogger`

* Fixed problems with mimeparse code

* Fixed some corner cases with CGI scripts

* :mod:`paste.auth.auth_tkt` will URL-quote usernames, avoiding some
  errors with usernames with ``!`` in them.

* Improve handling of errors in fetching error pages in
  :mod:`paste.errordocument`.

1.7.4
-----

* Fix XSS bug (security issue) with not found handlers for
  :class:`paste.urlparser.StaticURLParser` and
  :class:`paste.urlmap.URLMap`.  If you ask for a path with
  ``/--><script>...`` that will be inserted in the error page and can
  execute Javascript.  Reported by Tim Wintle with further details
  from Georg-Christian Pranschke.

* Replaced :func:`paste.util.mimeparse.desired_match`

1.7.3.1
-------

* Removed directory name from 404 errors in
  :class:`paste.urlparser.StaticURLParser`.

* Fixed packaging to include Javascript and images for
  :mod:`paste.evalexception`

1.7.3
-----

* I got a fever and the only prescription is more :mod:`paste.cowbell`!
